# PPS-vjp-unaiMB-unidad1-Pruebas-PPS

./: Makefile  README.md  mkdocs.yml  pyproject.toml  requeriments.txt  setup.cfg
docs/: api.md  index.md  uso.md
scripts/: run-tests.sh
src/mi_proyecto.egg-info/: PKG-INFO  SOURCES.txt
src/notas/: __init__.py  main.py  notas.py
tests/: test_notas_pytest.py  test_notas_unittest.py
